--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,16 @@
             background-color: #45a049;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11321367896">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11321367896');
+</script>
 </head>
 <body>
     <div class="container">
