--- a/reviews.html
+++ b/reviews.html
@@ -36,6 +36,16 @@
             color: gold;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11321367896">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11321367896');
+</script>
 </head>
 <body>
     <div class="container">
